fix: spacing issues and loading on smaller screens, refactor fetchMore

--- a/src/components/widgets/ConnectionList/index.module.scss
+++ b/src/components/widgets/ConnectionList/index.module.scss
@@ -1,6 +1,7 @@
 .grid {
   --items-per-row: 2;
   display: grid;
+  gap: 1rem;
   grid-template-columns: repeat(var(--items-per-row), 1fr);
   max-height: 16rem;
   overflow: hidden auto;
@@ -15,5 +16,11 @@
   }
   @media screen and (min-width: 75em) {
     --items-per-row: 6;
+  }
+  & > * {
+    transition: background-color 0.2s ease-in-out;
+    &:hover {
+      background-color: rgb(240, 244, 244);
+    }
   }
 }
