--- a/src/components/widgets/UserList/UserListItem/index.module.scss
+++ b/src/components/widgets/UserList/UserListItem/index.module.scss
@@ -1,5 +1,15 @@
 .root {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  gap: 0.75rem;
+
+  @media screen and (min-width: 36em) {
+    grid-template-columns: min-content 2fr 1fr;
+    justify-items: normal;
+  }
+
   &:hover {
     transform: translateY(-6px);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
